<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="npv_app_name">Lets Connect</string>
    <string name="npv_login_email">Email</string>
    <string name="npv_login_email_placeholder">Please input your email</string>
    <string name="npv_login_password">Password</string>
    <string name="npv_login_password_placeholder">Please input password</string>
    <string name="npv_login">Login</string>
    <string name="npv_no_account">No account?</string>
    <string name="npv_create_account">Create one</string>
    <string name="npv_missing_email_or_password">Email or password is empty</string>
    <string name="npv_tap_to_connect">Tap to connect</string>
    <string name="npv_disconnect">Disconnect</string>
    <string name="npv_connected">Connected</string>

    <string name="npv_membership">Membership</string>
    <string name="npv_membership_status_normal">Expires on: %1$s</string>
    <string name="npv_membership_status_expired">Membership has expired</string>
    <string name="npv_membership_renew">Renew</string>

    <!-- Menu title -->
    <string name="npv_switch_country_or_region">Switch Country/Region</string>
    <string name="npv_my_ticket">My Ticket</string>
    <string name="npv_referral_rebate">Referral Rebate</string>
    <string name="npv_notification_center">Notification Center</string>
    <string name="npv_logout">Logout</string>
    <string name="npv_about">About</string>

    <string name="npv_purchase_membership">Purchase Membership</string>

    <string name="npv_data_usage">Data Usage</string>
    <string name="npv_total_traffic_value_0">/%1$d GB</string>
    <string name="npv_total_traffic_default_value">/-- GB</string>
    <string name="npv_used_traffic_value_0">%.2f GB</string>
    <string name="npv_used_traffic_default_value">-- GB</string>
    <string name="npv_valid_for">Valid For</string>
    <string name="npv_valid_for_days">%1$d Days</string>
    <string name="npv_valid_for_default_days">-- Days</string>

    <string name="npv_error_unknown">Unknown error</string>
    <string name="npv_error_network">Network connection failed</string>
    <string name="npv_error_server">Internal server error</string>

</resources>
