<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_spacing_dp16">

                <ImageView
                    android:layout_width="@dimen/view_height_dp64"
                    android:layout_height="@dimen/view_height_dp64"
                    android:contentDescription="@string/npv_app_name"
                    app:srcCompat="@drawable/letsconnect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/npv_app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="@dimen/padding_spacing_dp16">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_spacing_dp16"
                    android:text="@string/npv_login_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npv_login_email_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="@dimen/padding_spacing_dp16">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_spacing_dp16"
                    android:text="@string/npv_login_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npv_login_password_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_spacing_dp16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_spacing_dp16">

                <Button
                    android:id="@+id/login"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:background="@color/colorLoginButton"
                    android:text="@string/npv_login"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_spacing_dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/npv_no_account"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/npv_create_account"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

